authorization for users working examples for ingredietns

--- a/src/main/resources/templates/catering.html
+++ b/src/main/resources/templates/catering.html
@@ -502,7 +502,7 @@
 	    <div class="navbar-header">
 	      <a class="navbar-brand" href="#">ITPH - Fase2 - Catering Project</a>
 	    </div>
-	    <ul class="nav navbar-nav">
+	    <ul class="nav navbar-nav" onload="">
 	      <li class="active"><a href="#" onclick="changeToHome()">Home</a></li>
 	      <li><a href="#">Page 1</a></li>
 	      <li><a href="#">Page 2</a></li>
