--- a/src/main/resources/templates/catering.html
+++ b/src/main/resources/templates/catering.html
@@ -21,7 +21,17 @@
 		createMenuButton("button2","Add New Ingredient",addIngredient);
 		createMenuButton("button3","Edit Ingredient",getIngredientsForEdit);
 		createMenuButton("button4","Delete Ingredient",getIngredientsForDelete);
-		createMenuButton("button5","Add Dummy Ingredient",postDummyIngredient);
+		createMenuButton("button5","Add Dummy Ingredient",postDummyIngredients);
+	};
+	
+	function changeToRecepie() {
+		clearMenuRow();
+		clearContainer();
+		createMenuButton("button1","Get All Recepies",getAllRecepies);
+		//createMenuButton("button2","Add New Ingredient",addIngredient);
+		//createMenuButton("button3","Edit Ingredient",getIngredientsForEdit);
+		//createMenuButton("button4","Delete Ingredient",getIngredientsForDelete);
+		createMenuButton("button5","Add Dummy Recepie",postDummyRecepies);
 	};
 	
 	function changeToSettings() {
@@ -57,7 +67,6 @@
 	
 	function creatOrderDropdown(){
 		var dropdownSort = document.createElement("SELECT");
-		dropdownSort.onchange = getAllIngredientsSorted;
 		dropdownSort.id="dropdownSort";
 		var dropdownSortDesc = document.createElement("SELECT");
 		var optionAsc = document.createElement("option");
@@ -68,7 +77,6 @@
 		optionDesc.text = "Descending";
 		optionDesc.value= "Descending";
 		dropdownSortDesc.add(optionDesc);
-		dropdownSortDesc.onchange = getAllIngredientsSorted;
 		dropdownSortDesc.id="dropdownSortDesc";
 		var menuRow = document.getElementById("menuRow");
 		menuRow.appendChild(dropdownSort);
@@ -91,6 +99,8 @@
 		menuRow.appendChild(dropdownSortDesc);
 	};
 	
+	
+	
 	function createSearchInput(api){
 		var apiText = api;
 		var input = document.createElement("INPUT");
@@ -106,9 +116,9 @@
 		switch(api){
 			case "ingredient":
 				if (search==""){
-					getDataListSorted(api,"id",false,false,0);
+					getIngredientListSorted(api,"id",false,false,0);
 				}else{
-					getDataListSorted(api+"/"+search+"/search","id",false,false,0);
+					getIngredientListSorted(api+"/"+search+"/search","id",false,false,0);
 				};
 				break;
 			case "settings/role":
@@ -133,10 +143,10 @@
 	//DUMMY DATA CODES START - !! DELETE IN FINAL VERSION !!
 	//------------------------------------------
 	
-	function postDummyIngredient() {
+	function postDummyIngredients() {
 		postData("ingredient",'{"name":"Onion","type":"Vegetable","unitType":"Piece","caloriePerUnit":0.10}');
 		postData("ingredient",'{"name":"Potato","type":"Vegetable","unitType":"Piece","caloriePerUnit":0.40}');
-		postData("ingredient",'{"name":"Beef Meat Ball","type":"Vegetable","unitType":"gr","caloriePerUnit":0.15}');
+		postData("ingredient",'{"name":"Beef Meat Ball","type":"Meat","unitType":"gr","caloriePerUnit":0.15}');
 		postData("ingredient",'{"name":"Black Pepper","type":"Spice","unitType":"Piece","caloriePerUnit":0.01}');
 		postData("ingredient",'{"name":"Black Pepper Grinded","type":"Spice","unitType":"gr","caloriePerUnit":0.01}');
 		
@@ -154,6 +164,12 @@
 		postData("settings/user",'{"username":"chef","firstName":"chef name","lastName":"chef last name","email":"user@cateringproject.nl","password":"password","role":{"id":3}}');		
 	};
 	
+	function postDummyRecepies() {
+		postData("recepie",'{"name":"Onion soup","unitType":"Bowl","recepieType":"Soup","caloriePerPortion":45,"portionPerRecepie":10}');
+		postData("recepie",'{"name":"French Fries","unitType":"Appetizer Plate","recepieType":"Fast Food","caloriePerPortion":75,"portionPerRecepie":12}');
+		postData("recepie",'{"name":"Meat Balls Coctail","unitType":"Lunch Plate","recepieType":"Main Dishes","caloriePerPortion":94,"portionPerRecepie":8}');		
+	};
+	
 	//------------------------------------------
 	//DUMMY DATA CODES END - !! DELETE IN FINAL VERSION !!
 	//------------------------------------------
@@ -167,8 +183,10 @@
 		if(document.getElementById("dropdownSort")==null && document.getElementById("dropdownSortDesc")==null ){
 			creatOrderDropdown();
 			createSearchInput("ingredient");
+			dropdownSort.onchange = getAllIngredientsSorted;
+			dropdownSortDesc.onchange = getAllIngredientsSorted;
 		};
-		getDataListSorted("ingredient","id",false,true,0)
+		getIngredientListSorted("ingredient","id",false,true,0)
 	};
 	
 	//For deciding sort column and direction
@@ -176,9 +194,9 @@
 		var key = document.getElementById("dropdownSort").value;
 		var desc = document.getElementById("dropdownSortDesc").value;
 		if(desc=="Descending")
-			getDataListSorted("ingredient",key,true,false,0);
+			getIngredientListSorted("ingredient",key,true,false,0);
 		else
-			getDataListSorted("ingredient",key,false,false,0);
+			getIngredientListSorted("ingredient",key,false,false,0);
 		document.getElementById("dropdownSort").value = key;
 		
 	};
@@ -204,7 +222,7 @@
 	};
 	
 	function getIngredientsForDelete() {  
-		getDataListSorted("ingredient","id",false,true,1);
+		getIngredientListSorted("ingredient","id",false,true,1);
 	};	
 	
 	function addIngredient() {  
@@ -212,7 +230,7 @@
 	}
 	
 	function getIngredientsForEdit() {  
-		getDataListSorted("ingredient","id",false,true,2);
+		getIngredientListSorted("ingredient","id",false,true,2);
 	};
 	
 	function editIngredient(id) {  
@@ -289,10 +307,10 @@
 	};
 	
 	/*There is no overload in Javascript because of that I had to 
-	change getDataList function  to getDataListSorted function 
+	change getDataList function  to getIngredientListSorted function 
 	added first time for reading sorting headers
 	added mode to be able to switch standart list to edit mode and delete mode*/
-	function getDataListSorted(api,key,sort, firstTime, mode) {
+	function getIngredientListSorted(api,key,sort, firstTime, mode) {
 		var myObj, myArr, x, txt = "";
 		var xhttp = new XMLHttpRequest();
 		clearContainer();
@@ -359,6 +377,94 @@
 	//INGREDIENTS PAGE CODES END
 	//------------------------------------------
 	
+	//------------------------------------------
+	//RECEPIES PAGE CODES START
+	//------------------------------------------	
+	
+	function getAllRecepies() {
+		if(document.getElementById("dropdownSort")==null && document.getElementById("dropdownSortDesc")==null ){
+			creatOrderDropdown();
+			createSearchInput("recepie");
+			dropdownSort.onchange = getAllRecepiesSorted;
+			dropdownSortDesc.onchange = getAllRecepiesSorted;
+		};
+		getRecepieListSorted("recepie","id",false,true,0)
+	};
+	
+	//For deciding sort column and direction
+	function getAllRecepiesSorted() {
+		var key = document.getElementById("dropdownSort").value;
+		var desc = document.getElementById("dropdownSortDesc").value;
+		if(desc=="Descending")
+			getRecepieListSorted("recepie",key,true,false,0);
+		else
+			getRecepieListSorted("recepie",key,false,false,0);
+		document.getElementById("dropdownSort").value = key;
+		
+	};
+	
+	function getRecepieListSorted(api,key,sort, firstTime, mode) {
+		var myObj, myArr, x, txt = "";
+		var xhttp = new XMLHttpRequest();
+		clearContainer();
+		var container = document.getElementById("Container");
+		
+		xhttp.onreadystatechange = function() {
+			if (this.readyState == 4 && this.status == 200) {
+				myArr = JSON.parse(this.responseText);
+				myArr = sortArray(myArr,key, sort);
+				var table = document.createElement("Table");
+				for (x in myArr) {
+					var myObj = myArr[x];
+					var row = document.createElement("TR");
+					for(y in myObj) {
+						var col = document.createElement("TD");
+						var textNode = document.createTextNode(myObj[y]);
+						col.appendChild(textNode);
+						row.appendChild(col);
+						if(firstTime && x==0){
+							var option = document.createElement("OPTION");
+							var optionText = document.createTextNode(y);
+							option.appendChild(optionText);
+							option.value=y;
+							dropdownSort.appendChild(option);
+						};
+					};
+					switch(mode){
+					case 1:
+						var buttonDelete = document.createElement("BUTTON");
+						var nodeText = document.createTextNode("! Delete ! - " + myObj.name);
+						buttonDelete.appendChild(nodeText);
+						buttonDelete.value=myObj.id;
+						//buttonDelete.onclick=function (){deleteIngredient(this.value)};
+						row.appendChild(buttonDelete);
+						break;
+						
+					case 2:
+						var buttonEdit = document.createElement("BUTTON");
+						var nodeText = document.createTextNode("Edit - " + myObj.name);
+						buttonEdit.appendChild(nodeText);
+						buttonEdit.value=myObj.id;
+						//buttonEdit.onclick=function (){editIngredient(this.value)};
+						row.appendChild(buttonEdit);
+						break;
+					default:
+						break;
+					};
+					table.appendChild(row);
+				};
+				table.className='table table-striped table-bordered table-hover';
+				container.appendChild(table);
+			};
+		};
+		xhttp.open("GET", "http://localhost:8082/api/" + api);
+		xhttp.setRequestHeader("Content-type", "application/json");
+		xhttp.send();
+	}
+	
+	//------------------------------------------
+	//RECEPIES PAGE CODES END
+	//------------------------------------------	
 	
 	//------------------------------------------
 	//SETTINGS PAGE CODES START
@@ -607,8 +713,8 @@
 	    <ul id="mainMenu" class="nav navbar-nav">
 	      <li class="active"><a href="#" onclick="changeToHome()">Home</a></li>
 	      <li><a href="#">Page 1</a></li>
-	      <li><a href="#">Page 2 - [[${#httpServletRequest.isUserInRole("ROLE_ADMIN")}]]</a></li>
 	      <li><a href="#" onclick="changeToIngredient()">Ingredients</a></li>
+	      <li><a href="#" onclick="changeToRecepie()">Recepies</a></li>
 	      <li id="settingsMenuLi"><a href="#" onclick="changeToSettings()">Settings</a></li>
 	    </ul>
 	    <div class="navbar-right">
